# opioids-analysis

./: README.md  pyproject.toml
notebooks/: cross_correlation_analysis.ipynb  multimodal_analysis.ipynb  pearson_analysis.ipynb
params/: Mask-autoROIs18-slim.csv
src/opioids_analysis/: cross_correlation.py  multimodal.py  pearson.py  plotting.py
